--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,8 @@
   --background-end-rgb: 0, 0, 0;
 
   --red: #dc3a3a;
-  --gold: #fede4dbf;
+  --goldAlpha: #fede4dbf;
+  --gold: #fede4d;
 }
 
 html {
