--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@
   --red: #ef3e56;
   --goldAlpha: #fede4dbf;
   --gold: #fede4d;
+  --pokerGreen: #35654d;
 }
 
 html {
@@ -27,12 +28,7 @@ html {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--pokerGreen);
 }
 
 button {
